infrastructure/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vat-msa-web
  namespace: vat-msa
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vat-msa-web
  ports:
    - name: http
      port: 80
      targetPort: http
